# Dockerizing

./: .gitignore  CMakeLists.txt  Dockerfile
src/: main.cpp
